# ChibiMate

./: README.md
.github/workflows/: cpp-app.yml  msbuild.yml  python-app.yml  qt-app.yml
Chibiviewer/: CMakeLists.txt  ChibiViewer.cpp  ChibiViewer.vcxproj  Kalina.json  README.md  SampleGifs.md  Vector.json
Chibiviewer/Latest Stable Version/: ChibiViewer.cpp
Chibiviewer/Older Versions/: ChibiViewer - Copy (2).cpp  ChibiViewer - Copy (3).cpp  ChibiViewer - Copy (4).cpp  ChibiViewer - Copy (5).cpp  ChibiViewer - Copy.cpp
Chibiviewer/spine-c/src/: extension.cpp
Kalinaviewer/: kalinaviewer.spec  qt_gif_viewer_fixed.py  requirements.txt
common/: requirements.txt
gifmakertools/: Makefile  create_rotating_text.py  dnd.html  fade_text.py  imada_grid.py  index.html  large_image_generator.py  orbiting_image.py  stb_image_write.h  wave_gif_maker.c  wave_gif_maker.py
vectorviewer/: build.bat  qt_env_fix.py  qt_gif_viewer_fixed.py  vectorviewer.spec
